# shadow-fleet-tracker

./: .env.example  .gitattributes  .gitignore  Dockerfile  Makefile  SHADOW_FLEET_TRACKER.md  config.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  pages.yml  update-data.yml
data/: vessels.db
docs/: archive.html  data.json  index.html  map.html  ofac_sdn_vessels.json
scripts/: publish_digest.sh  sync_osintukraine.py  updater.py
src/: __init__.py  cli.py  config.py  constants.py  db.py  models.py  scoring.py
src/api/: auth.py  main.py
src/distribution/: __init__.py  telegram.py
src/ingest/: __init__.py  ais.py  eu_sanctions.py  ofac.py  opensanctions.py  opensanctions_parser.py  tankertrackers.py
src/viz/: __init__.py  map.py  site.py
tests/: test_ais.py  test_api.py  test_config.py  test_db.py  test_dedup.py  test_eu_and_changes.py  test_export.py  test_map.py  test_models.py  test_ofac.py  test_scoring.py
tests/fixtures/: sample_sdn.xml  sample_sdn_modern.xml
